Added a "Gradle" compiler settings page. JPS builder now uses this settings.
Settings include values for:
- Max heap size
- Max PermGen size

Change-Id: If901e22d0fa016410c253a7f05aaed1706165970